test/sematest/invalid/test5.java
/* -*- coding:utf-8; mode:java; -*- */

class Test {

	public int System;

	public static void main(String[] args) { }

	public void f() {
		System.out.println(42);
	}

}
